--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import "rsuite/dist/rsuite.css";
+
+#root{ padding: 10px; }
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
